syntax = "proto3";

package test.oneof.v1;

option java_package = "test.oneof.v1";
option java_outer_classname = "PaymentProtos";

message Payment {
    string id = 1;
    int64 amount = 2;

    oneof method {
        CreditCard credit_card = 3;
        BankTransfer bank_transfer = 4;
    }
}

message CreditCard {
    string card_number = 1;
    string expiry = 2;
}

message BankTransfer {
    string account_number = 1;
    string bank_code = 2;
}
